# opera-rtc-s1-browse

./: CHANGELOG.md  Dockerfile  README.md  build-service  cloudformation.yml  environment.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/actions/deploy/: action.yml
.github/workflows/: deploy-prod.yml  deploy-uat.yml  release.yml  static-analysis.yml  test-and-build.yml  test.yml
src/opera_rtc_s1_browse/: __init__.py  __main__.py  auth.py  create_browse.py  harmony_service.py  process.py
tests/: test_auth.py  test_create_browse.py  test_entrypoints.py  test_harmony_service.py
tests/data/: test_VH.tif  test_VV.tif  test_rgb.tif
