[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "opera_rtc_s1_browse"
requires-python = ">=3.8"
authors = [
    {name="tools-bot", email="UAF-asf-apd@alaska.edu"},
]
description = "A tool for create OPERA RTC S1 browse images"
license = {text = "BSD-3-Clause"}
classifiers=[
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "asf_search",
    "boto3",
    "gdal",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
develop = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "opera-rtc-s1-browse"
Documentation = "https://github.com/asfhyp3/opera-rtc-s1-browse#opera-rtc-s1-browse"

[project.scripts]
create_browse = "opera_rtc_s1_browse.create_browse:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
script_launch_mode = "subprocess"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
